--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.17.0"
   },
