--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-grid-gallery": "^1.0.1-alpha.0",
+    "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
     "react-leaflet": "^4.2.1",
@@ -18,7 +18,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
-    "yet-another-react-lightbox": "^3.17.0"
+    "yet-another-react-lightbox": "^3.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
